# KNN

./: .gitignore  README.md  env.sh  evalconfig.json  learnconfig.json  pyproject.toml  requirements.txt  train_job.sh
scripts/: file_to_lmdb.py  get_vocab_from_data.py  split_tst.py  visualize_augmentations.py
scripts/test/: test_file_to_lmdb.py
src/augmentations/: __init__.py  base.py  color.py  compose.py  gaussian_blur.py  gaussian_noise.py  geometry.py  morph_ops.py
src/common/: tokenizer.py  vocabulary.txt
src/evaluation/: evalconfig.py  evaluator.py  metrics.py
src/learn/: README.md  __init__.py  train.py
src/learn/augmentations/: base.py  color.py  compose.py  gaussian_blur.py  gaussian_noise.py  geometry.py  morph_ops.py
src/learn/components/: swin_feature_extractor.py
src/learn/config/: learnconfig.py
src/learn/database/: __init__.py  iamdataset.py  ocrcollatefn.py  ocrdataset.py
src/learn/database/test/: test_ocrdataset.py  test_read.py
src/model/: __init__.py  decoderonly.py  knn.py  todo.txt  visualadapter.py  visualtokenizer.py
test/scripts/: img_to_lmdb.py  test_read_file_from_lmdb.py
test/src/learn/database/: test_database.py
tests/: utils.py
tests/scripts/: test_write_file_to_lmdb.py
tests/src/learn/database/: test_read.py
tests/src/model/: decoderonly_test.py  knn_test.py  visualtokenizer_test.py
