[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "knn"
version = "0.1.0"
description = "OCR / KNN project with PyTorch and LMDB"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # PyTorch
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",

    # OpenCV / Images
    "opencv-python>=4.9.0.80",
    "Pillow>=10.0.0",

    # Quant / Math
    "numpy>=1.26.0",
    "scipy>=1.11.0",

    # Utils
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",

    # Data
    "pandas>=2.1.0",
    "lmdb>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]